--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,25 @@
 <html>
   <head>
     <title>Hidden Server</title>
+    <style>
+      body {
+          background-color: violet;
+      }
+
+      h1 {
+          color: white;
+          text-align: center;
+          font-family: arial;
+      }
+
+      p {
+          font-family: arial;
+          font-size: 20px;
+          text-align: center;
+      }
+    </style>
   </head>
+
   <body>
 
     <h1>Sample Tor Server</h1>
